--- a/games/FNAF 3/index.html
+++ b/games/FNAF 3/index.html
@@ -6,18 +6,14 @@
   <title>FNAF 3 Embed</title>
   <style>
     html, body {
-      height: 100%;
       margin: 0;
+      height: 100%;
       background: #000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
     iframe {
-      width: 100vw;
-      height: 100vh;
-      border: none;       /* removes border */
-      outline: none;      /* removes focus outline */
+      width: 100%;
+      height: 100%;
+      border: none;
     }
   </style>
 </head>
