--- a/games/FNAF 3/index.html
+++ b/games/FNAF 3/index.html
@@ -1,27 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FNAF 3 Embed</title>
+  <base href="https://cdn.jsdelivr.net/gh/genizy/fnaf@latest/3/">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Five Nights at Freddy's 3</title>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <style>
     html, body {
       margin: 0;
       height: 100%;
       background: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
+    #MMFCanvas {
+      width: 100vw;
+      height: 100vh;
+      display: block;
+      background: #000;
+    }
+    #progress-container {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 80%;
+      max-width: 600px;
+      color: #fff;
+      font-family: sans-serif;
     }
   </style>
 </head>
 <body>
-  <iframe
-    src="https://run3.io/popgame/fnaf/fnaf3.html"
-    allowfullscreen
-    sandbox="allow-scripts allow-same-origin allow-popups allow-pointer-lock"
-  ></iframe>
+  <canvas id="MMFCanvas" width="1280" height="720">
+    Your browser does not support Canvas, Please try again.
+  </canvas>
+
+  <div id="progress-container">
+    <div style="margin-bottom: 6px;">Downloading... <span id="download-text">0%</span></div>
+    <div style="width: 100%; background: #444; border-radius: 6px; overflow: hidden;">
+      <div id="download-bar" style="height: 10px; background: #3b82f6; width: 0%; transition: width 0.2s;"></div>
+    </div>
+    <div style="margin: 12px 0 6px;">Extracting... <span id="extract-text">0%</span></div>
+    <div style="width: 100%; background: #444; border-radius: 6px; overflow: hidden;">
+      <div id="extract-bar" style="height: 10px; background: #10b981; width: 0%; transition: width 0.2s;"></div>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
