deploy: ab715498e36aed88bd1ec3f3d34b02c8fdabd416

--- a/index.html
+++ b/index.html
@@ -915,11 +915,11 @@
       <img class="thumb" src="games/Ages of Conflict/thumbnail.png" alt="Ages of Conflict">
     </div>
     <div class="card-title">Ages of Conflict</div>
-  </div><div class="card game-card" data-index="2" data-folder="Bad Piggies" data-name="bad piggies" onclick="prepareGame('Bad%20Piggies','Bad%20Piggies','games/Bad Piggies/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="2" data-folder="Bad Piggies" data-name="puzzle" onclick="prepareGame('Bad%20Piggies','Puzzle','games/Bad Piggies/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bad Piggies/thumbnail.jpg')">
-      <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies">
+      <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Puzzle">
     </div>
-    <div class="card-title">Bad Piggies</div>
+    <div class="card-title">Puzzle</div>
   </div><div class="card game-card" data-index="3" data-folder="Bad Time Simulator" data-name="bad time simulator" onclick="prepareGame('Bad%20Time%20Simulator','Bad%20Time%20Simulator','games/Bad Time Simulator/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bad Time Simulator/thumbnail.jpg')">
       <img class="thumb" src="games/Bad Time Simulator/thumbnail.jpg" alt="Bad Time Simulator">
