--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
     <header onclick="goToHome()"><img src="assets/logo.png" alt="Logo"></header>
     <ul id="categoryList">
       <li onclick="filterCategory('Home')">Home</li>
-      <li onclick="filterCategory('Action')">Action</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Tower Defence')">Tower Defence</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Basketball')">Basketball</li><li onclick="filterCategory('Driving')">Driving</li><li onclick="filterCategory('Puzzle')">Puzzle</li><li onclick="filterCategory('Clicker')">Clicker</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('Arcade')">Arcade</li><li onclick="filterCategory('2 Player')">2 Player</li><li onclick="filterCategory('Platformer')">Platformer</li>
+      <li onclick="filterCategory('Action')">Action</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Tower Defence')">Tower Defence</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Basketball')">Basketball</li><li onclick="filterCategory('Driving')">Driving</li><li onclick="filterCategory('Puzzle')">Puzzle</li><li onclick="filterCategory('Clicker')">Clicker</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('Arcade')">Arcade</li><li onclick="filterCategory('2 Player')">2 Player</li><li onclick="filterCategory('Platformer')">Platformer</li><li onclick="filterCategory('Casual')">Casual</li>
     </ul>
   </div>
   <div id="sidebarIndicator"></div>
@@ -1075,122 +1075,117 @@
       <img class="thumb" src="games/Extreme Run 3D/thumbnail.jpg" alt="Extreme Run 3D">
     </div>
     <div class="card-title">Extreme Run 3D</div>
-  </div><div class="card game-card" data-index="33" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Friday Night Funkin/thumbnail.png')">
-      <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin">
-    </div>
-    <div class="card-title">Friday Night Funkin</div>
-  </div><div class="card game-card" data-index="34" data-folder="Fruit Ninja" data-name="fruit ninja" onclick="prepareGame('Fruit%20Ninja','Fruit%20Ninja','games/Fruit Ninja/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="33" data-folder="Fruit Ninja" data-name="fruit ninja" onclick="prepareGame('Fruit%20Ninja','Fruit%20Ninja','games/Fruit Ninja/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Fruit Ninja/thumbnail.jpg')">
       <img class="thumb" src="games/Fruit Ninja/thumbnail.jpg" alt="Fruit Ninja">
     </div>
     <div class="card-title">Fruit Ninja</div>
-  </div><div class="card game-card" data-index="35" data-folder="Geometry Dash Lite" data-name="geometry dash lite" onclick="prepareGame('Geometry%20Dash%20Lite','Geometry%20Dash%20Lite','games/Geometry Dash Lite/thumbnail.png')">
+  </div><div class="card game-card" data-index="34" data-folder="Geometry Dash Lite" data-name="geometry dash lite" onclick="prepareGame('Geometry%20Dash%20Lite','Geometry%20Dash%20Lite','games/Geometry Dash Lite/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Geometry Dash Lite/thumbnail.png')">
       <img class="thumb" src="games/Geometry Dash Lite/thumbnail.png" alt="Geometry Dash Lite">
     </div>
     <div class="card-title">Geometry Dash Lite</div>
-  </div><div class="card game-card" data-index="36" data-folder="Get Yoked" data-name="get yoked" onclick="prepareGame('Get%20Yoked','Get%20Yoked','games/Get Yoked/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="35" data-folder="Get Yoked" data-name="get yoked" onclick="prepareGame('Get%20Yoked','Get%20Yoked','games/Get Yoked/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Get Yoked/thumbnail.jpg')">
       <img class="thumb" src="games/Get Yoked/thumbnail.jpg" alt="Get Yoked">
     </div>
     <div class="card-title">Get Yoked</div>
-  </div><div class="card game-card" data-index="37" data-folder="Gobble" data-name="gobble" onclick="prepareGame('Gobble','Gobble','games/Gobble/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="36" data-folder="Gobble" data-name="gobble" onclick="prepareGame('Gobble','Gobble','games/Gobble/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Gobble/thumbnail.jpg')">
       <img class="thumb" src="games/Gobble/thumbnail.jpg" alt="Gobble">
     </div>
     <div class="card-title">Gobble</div>
-  </div><div class="card game-card" data-index="38" data-folder="Going Balls" data-name="going balls" onclick="prepareGame('Going%20Balls','Going%20Balls','games/Going Balls/thumbnail.png')">
+  </div><div class="card game-card" data-index="37" data-folder="Going Balls" data-name="going balls" onclick="prepareGame('Going%20Balls','Going%20Balls','games/Going Balls/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Going Balls/thumbnail.png')">
       <img class="thumb" src="games/Going Balls/thumbnail.png" alt="Going Balls">
     </div>
     <div class="card-title">Going Balls</div>
-  </div><div class="card game-card" data-index="39" data-folder="Gold Digger FRVR" data-name="gold digger frvr" onclick="prepareGame('Gold%20Digger%20FRVR','Gold%20Digger%20FRVR','games/Gold Digger FRVR/thumbnail.png')">
+  </div><div class="card game-card" data-index="38" data-folder="Gold Digger FRVR" data-name="gold digger frvr" onclick="prepareGame('Gold%20Digger%20FRVR','Gold%20Digger%20FRVR','games/Gold Digger FRVR/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Gold Digger FRVR/thumbnail.png')">
       <img class="thumb" src="games/Gold Digger FRVR/thumbnail.png" alt="Gold Digger FRVR">
     </div>
     <div class="card-title">Gold Digger FRVR</div>
-  </div><div class="card game-card" data-index="40" data-folder="Grindcraft" data-name="grindcraft" onclick="prepareGame('Grindcraft','Grindcraft','games/Grindcraft/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="39" data-folder="Grindcraft" data-name="grindcraft" onclick="prepareGame('Grindcraft','Grindcraft','games/Grindcraft/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Grindcraft/thumbnail.jpg')">
       <img class="thumb" src="games/Grindcraft/thumbnail.jpg" alt="Grindcraft">
     </div>
     <div class="card-title">Grindcraft</div>
-  </div><div class="card game-card" data-index="41" data-folder="Gun Spin" data-name="gun spin" onclick="prepareGame('Gun%20Spin','Gun%20Spin','games/Gun Spin/thumbnail.png')">
+  </div><div class="card game-card" data-index="40" data-folder="Gun Spin" data-name="gun spin" onclick="prepareGame('Gun%20Spin','Gun%20Spin','games/Gun Spin/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Gun Spin/thumbnail.png')">
       <img class="thumb" src="games/Gun Spin/thumbnail.png" alt="Gun Spin">
     </div>
     <div class="card-title">Gun Spin</div>
-  </div><div class="card game-card" data-index="42" data-folder="Hanger 2" data-name="hanger 2" onclick="prepareGame('Hanger%202','Hanger%202','games/Hanger 2/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="41" data-folder="Hanger 2" data-name="hanger 2" onclick="prepareGame('Hanger%202','Hanger%202','games/Hanger 2/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Hanger 2/thumbnail.jpg')">
       <img class="thumb" src="games/Hanger 2/thumbnail.jpg" alt="Hanger 2">
     </div>
     <div class="card-title">Hanger 2</div>
-  </div><div class="card game-card" data-index="43" data-folder="Happy Room" data-name="happy room" onclick="prepareGame('Happy%20Room','Happy%20Room','games/Happy Room/thumbnail.png')">
+  </div><div class="card game-card" data-index="42" data-folder="Happy Room" data-name="happy room" onclick="prepareGame('Happy%20Room','Happy%20Room','games/Happy Room/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Happy Room/thumbnail.png')">
       <img class="thumb" src="games/Happy Room/thumbnail.png" alt="Happy Room">
     </div>
     <div class="card-title">Happy Room</div>
-  </div><div class="card game-card" data-index="44" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="43" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
       <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels">
     </div>
     <div class="card-title">Happy Wheels</div>
-  </div><div class="card game-card" data-index="45" data-folder="Helix Jump" data-name="helix jump" onclick="prepareGame('Helix%20Jump','Helix%20Jump','games/Helix Jump/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="44" data-folder="Helix Jump" data-name="helix jump" onclick="prepareGame('Helix%20Jump','Helix%20Jump','games/Helix Jump/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Helix Jump/thumbnail.jpg')">
       <img class="thumb" src="games/Helix Jump/thumbnail.jpg" alt="Helix Jump">
     </div>
     <div class="card-title">Helix Jump</div>
-  </div><div class="card game-card" data-index="46" data-folder="Henry Stickmin Escaping The Prison" data-name="henry stickmin escaping the prison" onclick="prepareGame('Henry%20Stickmin%20Escaping%20The%20Prison','Henry%20Stickmin%20Escaping%20The%20Prison','games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="45" data-folder="Henry Stickmin Escaping The Prison" data-name="henry stickmin escaping the prison" onclick="prepareGame('Henry%20Stickmin%20Escaping%20The%20Prison','Henry%20Stickmin%20Escaping%20The%20Prison','games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
       <img class="thumb" src="games/Henry Stickmin Escaping The Prison/thumbnail.jpg" alt="Henry Stickmin Escaping The Prison">
     </div>
     <div class="card-title">Henry Stickmin Escaping The Prison</div>
-  </div><div class="card game-card" data-index="47" data-folder="Henry Stickmin Fleeing The Complex" data-name="henry stickmin fleeing the complex" onclick="prepareGame('Henry%20Stickmin%20Fleeing%20The%20Complex','Henry%20Stickmin%20Fleeing%20The%20Complex','games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
+  </div><div class="card game-card" data-index="46" data-folder="Henry Stickmin Fleeing The Complex" data-name="henry stickmin fleeing the complex" onclick="prepareGame('Henry%20Stickmin%20Fleeing%20The%20Complex','Henry%20Stickmin%20Fleeing%20The%20Complex','games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
       <img class="thumb" src="games/Henry Stickmin Fleeing The Complex/thumbnail.png" alt="Henry Stickmin Fleeing The Complex">
     </div>
     <div class="card-title">Henry Stickmin Fleeing The Complex</div>
-  </div><div class="card game-card" data-index="48" data-folder="Henry Stickmin Infiltrating The Airship" data-name="henry stickmin infiltrating the airship" onclick="prepareGame('Henry%20Stickmin%20Infiltrating%20The%20Airship','Henry%20Stickmin%20Infiltrating%20The%20Airship','games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="47" data-folder="Henry Stickmin Infiltrating The Airship" data-name="henry stickmin infiltrating the airship" onclick="prepareGame('Henry%20Stickmin%20Infiltrating%20The%20Airship','Henry%20Stickmin%20Infiltrating%20The%20Airship','games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg')">
       <img class="thumb" src="games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg" alt="Henry Stickmin Infiltrating The Airship">
     </div>
     <div class="card-title">Henry Stickmin Infiltrating The Airship</div>
-  </div><div class="card game-card" data-index="49" data-folder="Henry Stickmin Stealing The Diamond" data-name="henry stickmin stealing the diamond" onclick="prepareGame('Henry%20Stickmin%20Stealing%20The%20Diamond','Henry%20Stickmin%20Stealing%20The%20Diamond','games/Henry Stickmin Stealing The Diamond/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="48" data-folder="Henry Stickmin Stealing The Diamond" data-name="henry stickmin stealing the diamond" onclick="prepareGame('Henry%20Stickmin%20Stealing%20The%20Diamond','Henry%20Stickmin%20Stealing%20The%20Diamond','games/Henry Stickmin Stealing The Diamond/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Stealing The Diamond/thumbnail.jpg')">
       <img class="thumb" src="games/Henry Stickmin Stealing The Diamond/thumbnail.jpg" alt="Henry Stickmin Stealing The Diamond">
     </div>
     <div class="card-title">Henry Stickmin Stealing The Diamond</div>
-  </div><div class="card game-card" data-index="50" data-folder="Highway Racer" data-name="highway racer" onclick="prepareGame('Highway%20Racer','Highway%20Racer','games/Highway Racer/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="49" data-folder="Highway Racer" data-name="highway racer" onclick="prepareGame('Highway%20Racer','Highway%20Racer','games/Highway Racer/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Highway Racer/thumbnail.jpg')">
       <img class="thumb" src="games/Highway Racer/thumbnail.jpg" alt="Highway Racer">
     </div>
     <div class="card-title">Highway Racer</div>
-  </div><div class="card game-card" data-index="51" data-folder="Hover Race Drive" data-name="hover race drive" onclick="prepareGame('Hover%20Race%20Drive','Hover%20Race%20Drive','games/Hover Race Drive/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="50" data-folder="Hover Race Drive" data-name="hover race drive" onclick="prepareGame('Hover%20Race%20Drive','Hover%20Race%20Drive','games/Hover Race Drive/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Hover Race Drive/thumbnail.jpg')">
       <img class="thumb" src="games/Hover Race Drive/thumbnail.jpg" alt="Hover Race Drive">
     </div>
     <div class="card-title">Hover Race Drive</div>
-  </div><div class="card game-card" data-index="52" data-folder="Idle Breakout" data-name="idle breakout" onclick="prepareGame('Idle%20Breakout','Idle%20Breakout','games/Idle Breakout/thumbnail.png')">
+  </div><div class="card game-card" data-index="51" data-folder="Idle Breakout" data-name="idle breakout" onclick="prepareGame('Idle%20Breakout','Idle%20Breakout','games/Idle Breakout/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Idle Breakout/thumbnail.png')">
       <img class="thumb" src="games/Idle Breakout/thumbnail.png" alt="Idle Breakout">
     </div>
     <div class="card-title">Idle Breakout</div>
-  </div><div class="card game-card" data-index="53" data-folder="Infinite Craft" data-name="infinite craft" onclick="prepareGame('Infinite%20Craft','Infinite%20Craft','games/Infinite Craft/thumbnail.png')">
+  </div><div class="card game-card" data-index="52" data-folder="Infinite Craft" data-name="infinite craft" onclick="prepareGame('Infinite%20Craft','Infinite%20Craft','games/Infinite Craft/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Infinite Craft/thumbnail.png')">
       <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft">
     </div>
     <div class="card-title">Infinite Craft</div>
-  </div><div class="card game-card" data-index="54" data-folder="Ink Game" data-name="ink game" onclick="prepareGame('Ink%20Game','Ink%20Game','games/Ink Game/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="53" data-folder="Ink Game" data-name="ink game" onclick="prepareGame('Ink%20Game','Ink%20Game','games/Ink Game/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Ink Game/thumbnail.jpg')">
       <img class="thumb" src="games/Ink Game/thumbnail.jpg" alt="Ink Game">
     </div>
     <div class="card-title">Ink Game</div>
-  </div><div class="card game-card" data-index="55" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="54" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="56" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="55" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
@@ -1420,6 +1415,16 @@
       <img class="thumb" src="games/Fireboy and Watergirl 1/thumbnail.jpg" alt="Fireboy and Watergirl 1">
     </div>
     <div class="card-title">Fireboy and Watergirl 1</div>
+  </div>
+          </div>
+        </div><div class="category" data-category="Casual">
+          <h2>Casual</h2>
+          <div class="grid">
+            <div class="card game-card" data-index="0" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Friday Night Funkin/thumbnail.png')">
+      <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin">
+    </div>
+    <div class="card-title">Friday Night Funkin</div>
   </div>
           </div>
         </div>
