deploy: 05b9c546db6b2e5c0ae0a070b25215a5edf9e2bb

--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
     <header onclick="goToHome()"><img src="assets/logo.png" alt="Logo"></header>
     <ul id="categoryList">
       <li onclick="filterCategory('Home')">Home</li>
-      <li onclick="filterCategory('Action')">Action</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Tower Defence')">Tower Defence</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Basketball')">Basketball</li><li onclick="filterCategory('Casual')">Casual</li><li onclick="filterCategory('Driving')">Driving</li><li onclick="filterCategory('Puzzle')">Puzzle</li><li onclick="filterCategory('Clicker')">Clicker</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('Arcade')">Arcade</li><li onclick="filterCategory('2 Player')">2 Player</li><li onclick="filterCategory('Platformer')">Platformer</li>
+      <li onclick="filterCategory('Action')">Action</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Tower Defence')">Tower Defence</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Basketball')">Basketball</li><li onclick="filterCategory('Casual')">Casual</li><li onclick="filterCategory('Simulation')">Simulation</li><li onclick="filterCategory('Driving')">Driving</li><li onclick="filterCategory('Puzzle')">Puzzle</li><li onclick="filterCategory('Clicker')">Clicker</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('Arcade')">Arcade</li><li onclick="filterCategory('2 Player')">2 Player</li><li onclick="filterCategory('Platformer')">Platformer</li>
     </ul>
   </div>
   <div id="sidebarIndicator"></div>
@@ -1270,6 +1270,16 @@
       <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin">
     </div>
     <div class="card-title">Friday Night Funkin</div>
+  </div>
+          </div>
+        </div><div class="category" data-category="Simulation">
+          <h2>Simulation</h2>
+          <div class="grid">
+            <div class="card game-card" data-index="0" data-folder="Bitlife" data-name="bitlife" onclick="prepareGame('Bitlife','Bitlife','games/Bitlife/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Bitlife/thumbnail.jpg')">
+      <img class="thumb" src="games/Bitlife/thumbnail.jpg" alt="Bitlife">
+    </div>
+    <div class="card-title">Bitlife</div>
   </div>
           </div>
         </div><div class="category" data-category="Driving">
