deploy: 209b0e003683cbe95b5b20442dce924ce006b13f

--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
     <header onclick="goToHome()"><img src="assets/logo.png" alt="Logo"></header>
     <ul id="categoryList">
       <li onclick="filterCategory('Home')">Home</li>
-      <li onclick="filterCategory('Action')">Action</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Simulation')">Simulation</li><li onclick="filterCategory('Tower Defence')">Tower Defence</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Basketball')">Basketball</li><li onclick="filterCategory('Casual')">Casual</li><li onclick="filterCategory('Driving')">Driving</li><li onclick="filterCategory('Puzzle')">Puzzle</li><li onclick="filterCategory('Clicker')">Clicker</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('Arcade')">Arcade</li><li onclick="filterCategory('2 Player')">2 Player</li><li onclick="filterCategory('Platformer')">Platformer</li>
+      <li onclick="filterCategory('Action')">Action</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Simulation')">Simulation</li><li onclick="filterCategory('Tower Defence')">Tower Defence</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Basketball')">Basketball</li><li onclick="filterCategory('Casual')">Casual</li><li onclick="filterCategory('Driving')">Driving</li><li onclick="filterCategory('Puzzle')">Puzzle</li><li onclick="filterCategory('Clicker')">Clicker</li><li onclick="filterCategory('Psychological')">Psychological</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('Arcade')">Arcade</li><li onclick="filterCategory('2 Player')">2 Player</li><li onclick="filterCategory('Platformer')">Platformer</li>
     </ul>
   </div>
   <div id="sidebarIndicator"></div>
@@ -1200,57 +1200,52 @@
       <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting">
     </div>
     <div class="card-title">Bad Parenting</div>
-  </div><div class="card game-card" data-index="1" data-folder="Bloodmoney " data-name="bloodmoney " onclick="prepareGame('Bloodmoney%20','Bloodmoney%20','games/Bloodmoney /thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
-      <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney ">
-    </div>
-    <div class="card-title">Bloodmoney </div>
-  </div><div class="card game-card" data-index="2" data-folder="Burger and Frights" data-name="burger and frights" onclick="prepareGame('Burger%20and%20Frights','Burger%20and%20Frights','games/Burger and Frights/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="1" data-folder="Burger and Frights" data-name="burger and frights" onclick="prepareGame('Burger%20and%20Frights','Burger%20and%20Frights','games/Burger and Frights/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Burger and Frights/thumbnail.jpg')">
       <img class="thumb" src="games/Burger and Frights/thumbnail.jpg" alt="Burger and Frights">
     </div>
     <div class="card-title">Burger and Frights</div>
-  </div><div class="card game-card" data-index="3" data-folder="Crank It!" data-name="crank it!" onclick="prepareGame('Crank%20It!','Crank%20It!','games/Crank It!/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="2" data-folder="Crank It!" data-name="crank it!" onclick="prepareGame('Crank%20It!','Crank%20It!','games/Crank It!/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Crank It!/thumbnail.jpg')">
       <img class="thumb" src="games/Crank It!/thumbnail.jpg" alt="Crank It!">
     </div>
     <div class="card-title">Crank It!</div>
-  </div><div class="card game-card" data-index="4" data-folder="FNAF 1" data-name="fnaf 1" onclick="prepareGame('FNAF%201','FNAF%201','games/FNAF 1/thumbnail.png')">
+  </div><div class="card game-card" data-index="3" data-folder="FNAF 1" data-name="fnaf 1" onclick="prepareGame('FNAF%201','FNAF%201','games/FNAF 1/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/FNAF 1/thumbnail.png')">
       <img class="thumb" src="games/FNAF 1/thumbnail.png" alt="FNAF 1">
     </div>
     <div class="card-title">FNAF 1</div>
-  </div><div class="card game-card" data-index="5" data-folder="FNAF 2" data-name="fnaf 2" onclick="prepareGame('FNAF%202','FNAF%202','games/FNAF 2/thumbnail.png')">
+  </div><div class="card game-card" data-index="4" data-folder="FNAF 2" data-name="fnaf 2" onclick="prepareGame('FNAF%202','FNAF%202','games/FNAF 2/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/FNAF 2/thumbnail.png')">
       <img class="thumb" src="games/FNAF 2/thumbnail.png" alt="FNAF 2">
     </div>
     <div class="card-title">FNAF 2</div>
-  </div><div class="card game-card" data-index="6" data-folder="FNAF 3" data-name="fnaf 3" onclick="prepareGame('FNAF%203','FNAF%203','games/FNAF 3/thumbnail.png')">
+  </div><div class="card game-card" data-index="5" data-folder="FNAF 3" data-name="fnaf 3" onclick="prepareGame('FNAF%203','FNAF%203','games/FNAF 3/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/FNAF 3/thumbnail.png')">
       <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3">
     </div>
     <div class="card-title">FNAF 3</div>
-  </div><div class="card game-card" data-index="7" data-folder="FNAF 4" data-name="fnaf 4" onclick="prepareGame('FNAF%204','FNAF%204','games/FNAF 4/thumbnail.png')">
+  </div><div class="card game-card" data-index="6" data-folder="FNAF 4" data-name="fnaf 4" onclick="prepareGame('FNAF%204','FNAF%204','games/FNAF 4/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
       <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4">
     </div>
     <div class="card-title">FNAF 4</div>
-  </div><div class="card game-card" data-index="8" data-folder="FNAF Pizzeria Simulator" data-name="fnaf pizzeria simulator" onclick="prepareGame('FNAF%20Pizzeria%20Simulator','FNAF%20Pizzeria%20Simulator','games/FNAF Pizzeria Simulator/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="7" data-folder="FNAF Pizzeria Simulator" data-name="fnaf pizzeria simulator" onclick="prepareGame('FNAF%20Pizzeria%20Simulator','FNAF%20Pizzeria%20Simulator','games/FNAF Pizzeria Simulator/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/FNAF Pizzeria Simulator/thumbnail.jpg')">
       <img class="thumb" src="games/FNAF Pizzeria Simulator/thumbnail.jpg" alt="FNAF Pizzeria Simulator">
     </div>
     <div class="card-title">FNAF Pizzeria Simulator</div>
-  </div><div class="card game-card" data-index="9" data-folder="FNAF Sister Location" data-name="fnaf sister location" onclick="prepareGame('FNAF%20Sister%20Location','FNAF%20Sister%20Location','games/FNAF Sister Location/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="8" data-folder="FNAF Sister Location" data-name="fnaf sister location" onclick="prepareGame('FNAF%20Sister%20Location','FNAF%20Sister%20Location','games/FNAF Sister Location/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/FNAF Sister Location/thumbnail.jpg')">
       <img class="thumb" src="games/FNAF Sister Location/thumbnail.jpg" alt="FNAF Sister Location">
     </div>
     <div class="card-title">FNAF Sister Location</div>
-  </div><div class="card game-card" data-index="10" data-folder="Granny" data-name="granny" onclick="prepareGame('Granny','Granny','games/Granny/thumbnail.png')">
+  </div><div class="card game-card" data-index="9" data-folder="Granny" data-name="granny" onclick="prepareGame('Granny','Granny','games/Granny/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Granny/thumbnail.png')">
       <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny">
     </div>
     <div class="card-title">Granny</div>
-  </div><div class="card game-card" data-index="11" data-folder="Hungry Lamu" data-name="hungry lamu" onclick="prepareGame('Hungry%20Lamu','Hungry%20Lamu','games/Hungry Lamu/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="10" data-folder="Hungry Lamu" data-name="hungry lamu" onclick="prepareGame('Hungry%20Lamu','Hungry%20Lamu','games/Hungry Lamu/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
       <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu">
     </div>
@@ -1355,6 +1350,16 @@
       <img class="thumb" src="games/CS Go Clicker/thumbnail.png" alt="CS Go Clicker">
     </div>
     <div class="card-title">CS Go Clicker</div>
+  </div>
+          </div>
+        </div><div class="category" data-category="Psychological">
+          <h2>Psychological</h2>
+          <div class="grid">
+            <div class="card game-card" data-index="0" data-folder="Bloodmoney " data-name="bloodmoney " onclick="prepareGame('Bloodmoney%20','Bloodmoney%20','games/Bloodmoney /thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
+      <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney ">
+    </div>
+    <div class="card-title">Bloodmoney </div>
   </div>
           </div>
         </div><div class="category" data-category="Clickers">
