deploy: a7fadbcc45adf906797109d33a59fd53ee179c93

--- a/index.html
+++ b/index.html
@@ -920,7 +920,12 @@
       <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War">
     </div>
     <div class="card-title">Age Of War</div>
-  </div><div class="card game-card" data-index="1" data-folder="Blackjack" data-name="blackjack" onclick="prepareGame('Blackjack','Blackjack','games/Blackjack/thumbnail.png')">
+  </div><div class="card game-card" data-index="1" data-folder="Ages of Conflict" data-name="ages of conflict" onclick="prepareGame('Ages%20of%20Conflict','Ages%20of%20Conflict','games/Ages of Conflict/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Ages of Conflict/thumbnail.png')">
+      <img class="thumb" src="games/Ages of Conflict/thumbnail.png" alt="Ages of Conflict">
+    </div>
+    <div class="card-title">Ages of Conflict</div>
+  </div><div class="card game-card" data-index="2" data-folder="Blackjack" data-name="blackjack" onclick="prepareGame('Blackjack','Blackjack','games/Blackjack/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Blackjack/thumbnail.png')">
       <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack">
     </div>
