deploy: 889bd03340f02d4f468cf2bb752a499b04648a44

--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
     <header onclick="goToHome()"><img src="assets/logo.png" alt="Logo"></header>
     <ul id="categoryList">
       <li onclick="filterCategory('Home')">Home</li>
-      <li onclick="filterCategory('Action')">Action</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Strategy')">Strategy</li><li onclick="filterCategory('Simulation')">Simulation</li><li onclick="filterCategory('Tower Defence')">Tower Defence</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Basketball')">Basketball</li><li onclick="filterCategory('Casual')">Casual</li><li onclick="filterCategory('Driving')">Driving</li><li onclick="filterCategory('Puzzle')">Puzzle</li><li onclick="filterCategory('Clicker')">Clicker</li><li onclick="filterCategory('Psychological')">Psychological</li><li onclick="filterCategory('Psyhological')">Psyhological</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('Arcade')">Arcade</li><li onclick="filterCategory('2 Player')">2 Player</li><li onclick="filterCategory('Platformer')">Platformer</li>
+      <li onclick="filterCategory('Action')">Action</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Strategy')">Strategy</li><li onclick="filterCategory('Simulation')">Simulation</li><li onclick="filterCategory('Tower Defence')">Tower Defence</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Basketball')">Basketball</li><li onclick="filterCategory('Casual')">Casual</li><li onclick="filterCategory('Driving')">Driving</li><li onclick="filterCategory('Puzzle')">Puzzle</li><li onclick="filterCategory('Clicker')">Clicker</li><li onclick="filterCategory('Psychological')">Psychological</li><li onclick="filterCategory('Psyhological')">Psyhological</li><li onclick="filterCategory('Arcade')">Arcade</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('2 Player')">2 Player</li><li onclick="filterCategory('Platformer')">Platformer</li>
     </ul>
   </div>
   <div id="sidebarIndicator"></div>
@@ -1392,6 +1392,31 @@
     <div class="card-title">Bloodmoney 2</div>
   </div>
           </div>
+        </div><div class="category" data-category="Arcade">
+          <h2>Arcade</h2>
+          <div class="grid">
+            <div class="card game-card" data-index="0" data-folder="Bouncy Motors" data-name="bouncy motors" onclick="prepareGame('Bouncy%20Motors','Bouncy%20Motors','games/Bouncy Motors/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Bouncy Motors/thumbnail.jpg')">
+      <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors">
+    </div>
+    <div class="card-title">Bouncy Motors</div>
+  </div><div class="card game-card" data-index="1" data-folder="Crazy Cattle 3D" data-name="crazy cattle 3d" onclick="prepareGame('Crazy%20Cattle%203D','Crazy%20Cattle%203D','games/Crazy Cattle 3D/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
+      <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D">
+    </div>
+    <div class="card-title">Crazy Cattle 3D</div>
+  </div><div class="card game-card" data-index="2" data-folder="Drift Boss" data-name="drift boss" onclick="prepareGame('Drift%20Boss','Drift%20Boss','games/Drift Boss/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Drift Boss/thumbnail.png')">
+      <img class="thumb" src="games/Drift Boss/thumbnail.png" alt="Drift Boss">
+    </div>
+    <div class="card-title">Drift Boss</div>
+  </div><div class="card game-card" data-index="3" data-folder="Helix Jump" data-name="helix jump" onclick="prepareGame('Helix%20Jump','Helix%20Jump','games/Helix Jump/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Helix Jump/thumbnail.jpg')">
+      <img class="thumb" src="games/Helix Jump/thumbnail.jpg" alt="Helix Jump">
+    </div>
+    <div class="card-title">Helix Jump</div>
+  </div>
+          </div>
         </div><div class="category" data-category="Clickers">
           <h2>Clickers</h2>
           <div class="grid">
@@ -1435,26 +1460,6 @@
       <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5">
     </div>
     <div class="card-title">Clear Vision 5</div>
-  </div>
-          </div>
-        </div><div class="category" data-category="Arcade">
-          <h2>Arcade</h2>
-          <div class="grid">
-            <div class="card game-card" data-index="0" data-folder="Crazy Cattle 3D" data-name="crazy cattle 3d" onclick="prepareGame('Crazy%20Cattle%203D','Crazy%20Cattle%203D','games/Crazy Cattle 3D/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
-      <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D">
-    </div>
-    <div class="card-title">Crazy Cattle 3D</div>
-  </div><div class="card game-card" data-index="1" data-folder="Drift Boss" data-name="drift boss" onclick="prepareGame('Drift%20Boss','Drift%20Boss','games/Drift Boss/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Drift Boss/thumbnail.png')">
-      <img class="thumb" src="games/Drift Boss/thumbnail.png" alt="Drift Boss">
-    </div>
-    <div class="card-title">Drift Boss</div>
-  </div><div class="card game-card" data-index="2" data-folder="Helix Jump" data-name="helix jump" onclick="prepareGame('Helix%20Jump','Helix%20Jump','games/Helix Jump/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Helix Jump/thumbnail.jpg')">
-      <img class="thumb" src="games/Helix Jump/thumbnail.jpg" alt="Helix Jump">
-    </div>
-    <div class="card-title">Helix Jump</div>
   </div>
           </div>
         </div><div class="category" data-category="2 Player">
