--- a/games/Dreader/index.html
+++ b/games/Dreader/index.html
@@ -1,42 +1,49 @@
-<style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden; /* hides scrollbars */
-    height: 100%;
-    width: 100%;
-    background: black; /* optional */
+<!-- Ultimate Game Stash file--> 
+<!-- For the regularly updating doc go to https://docs.google.com/document/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/ -->
+
+
+
+</style><style type="text/css">#button {
+  display:none;
+}
+.imgb_vis {
+  animation: imgb-animation 7s linear;
+}
+@keyframes imgb-animation {
+  10% {
+    transform: translateX(0);
   }
-
-  canvas {
-    display: block;
-    margin: auto;
-    position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0;
-    transform-origin: top left;
+  20% {
+    transform: translateX(100px);
   }
-</style>
-
-<script>
-  const canvas = document.querySelector("canvas");
-
-  function resizeCanvas() {
-    const gameWidth = 679;
-    const gameHeight = 465;
-
-    const scaleX = window.innerWidth / gameWidth;
-    const scaleY = window.innerHeight / gameHeight;
-    const scale = Math.min(scaleX, scaleY); // maintain aspect ratio
-
-    canvas.style.transform = `scale(${scale})`;
-
-    // Center the scaled canvas
-    const newWidth = gameWidth * scale;
-    const newHeight = gameHeight * scale;
-    canvas.style.left = `${(window.innerWidth - newWidth) / 2}px`;
-    canvas.style.top = `${(window.innerHeight - newHeight) / 2}px`;
+  90% {
+    transform: translateX(100px);
   }
+  100% {
+    transform: translateX(0);
+  }
+}</style></head><body dir="ltr" style="cursor: none;"><script type="module">
+            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/computer.class.js';
+            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/director.class.js';
+            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/maze.class.js';
+            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/monster.class.js';
+            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/player.class.js';
+            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/transition.class.js';
+            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/world.class.js';
 
-  window.addEventListener("resize", resizeCanvas);
-  window.addEventListener("load", resizeCanvas);
-</script>
+            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/core/client.class.js';
+        </script>
+        <canvas width="679" height="465" style="width: 1358px; height: 931px;">Canvas is not supported</canvas>
+
+        <div class="loading" style="visibility: hidden;"></div>
+
+        <a alt="show credits" class="show-credits" style="visibility: visible;"></a>
+
+        <div class="credits">
+            <h3> <a href="https://donitz.itch.io/" target="_blank"></a></h3>
+        </div>
+		<script src=""></script>
+    
+
+<script>gadgets.util.runOnLoadHandlers();</script><script>window.google.csi.tickDl();
+</script></body></html>
