--- a/index.html
+++ b/index.html
@@ -918,11 +918,11 @@
       <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting">
     </div>
     <div class="card-title">Bad Parenting</div>
-  </div><div class="card game-card" data-index="6" data-folder="Bad Piggies" data-name="puzzle" onclick="prepareGame('Bad%20Piggies','Puzzle','games/Bad Piggies/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="6" data-folder="Bad Piggies" data-name="bad piggies" onclick="prepareGame('Bad%20Piggies','Bad%20Piggies','games/Bad Piggies/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bad Piggies/thumbnail.jpg')">
-      <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Puzzle">
+      <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies">
     </div>
-    <div class="card-title">Puzzle</div>
+    <div class="card-title">Bad Piggies</div>
   </div><div class="card game-card" data-index="7" data-folder="Bad Time Simulator" data-name="bad time simulator" onclick="prepareGame('Bad%20Time%20Simulator','Bad%20Time%20Simulator','games/Bad Time Simulator/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bad Time Simulator/thumbnail.jpg')">
       <img class="thumb" src="games/Bad Time Simulator/thumbnail.jpg" alt="Bad Time Simulator">
@@ -1657,11 +1657,11 @@
         </div><div class="category" data-category="Puzzle">
           <h2>Puzzle</h2>
           <div class="grid">
-            <div class="card game-card" data-index="0" data-folder="Bad Piggies" data-name="puzzle" onclick="prepareGame('Bad%20Piggies','Puzzle','games/Bad Piggies/thumbnail.jpg')">
+            <div class="card game-card" data-index="0" data-folder="Bad Piggies" data-name="bad piggies" onclick="prepareGame('Bad%20Piggies','Bad%20Piggies','games/Bad Piggies/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bad Piggies/thumbnail.jpg')">
-      <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Puzzle">
+      <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies">
     </div>
-    <div class="card-title">Puzzle</div>
+    <div class="card-title">Bad Piggies</div>
   </div><div class="card game-card" data-index="1" data-folder="Block Blast" data-name="block blast" onclick="prepareGame('Block%20Blast','Block%20Blast','games/Block Blast/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
       <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast">
